<?xml version="1.0" encoding="utf-8"?>
<resources>
    //Common
    <string name="app_name">Cube</string>
    <string name="progress_bar_text">Please wait...</string>
    <string name="slogan_text">이유식이 똑똑해지다</string>
    <string name="app_name_text">큐브</string>
    <string name="kg_text">Kg</string>
    <string name="cm_text">cm</string>
    <string name="ml_text">ml</string>
    <string name="term_of_use_text">본 약관에서 사용되는 주요한 용어의 정의는 다음과 같습니다.\n
        \n &#9312; 회원 : 사이트의 약관에 동의하고 개인정보를 제공하여 회원등록을 한 자로서, 사이트와의 이용계약을 체결하고 사이트를 이용하는 이용자를 말합니다.
        \n &#9313; 이용계약 : 사이트 이용과 관련하여 사이트와 회원간에 체결 하는.
    </string>

    <string name="developing_text">Developing</string>
    <string name="required_text">Required</string>


    //MainLogin
    <string name="screen_main_login_text_login_with_email">Email로 로그인</string>
    <string name="screen_main_login_text_login_with_naver">네이버로 시작하기</string>
    <string name="screen_main_login_text_login_with_kakao">카카오로 시작</string>
    <string name="screen_main_login_text_register_with_email">Email로 회원가입</string>

    //EmailLogin
    <string name="screen_email_login_text_email_address">이메일 주소</string>
    <string name="screen_email_login_text_password">password</string>
    <string name="screen_email_login_text_forgot_password">비밀번호를 잊으셨습니까?</string>

    //EmailForgotPassword
    <string name="screen_email_forgot_password_text_email">비밀번호 재설정을 위해 이메일 주소를 입력하세요</string>
    <string name="screen_email_forgot_password_text_reset">재설정요</string>

    //EmailRegister
    <string name="screen_email_register_text_repeat_password">password 재입력</string>
    <string name="screen_email_register_text_certification_phone">휴대폰 인증</string>

    //NickName
    <string name="screen_nick_name_text_title">닉네임을 입력해주세요</string>

    //BabyName
    <string name="screen_baby_name_text_title">아기 이름을 입력해주세요</string>

    //MainTerm
    <string name="screen_main_term_text_term_use">이용약관</string>
    <string name="screen_main_term_text_term_use_required">이용약관 동의 (필수)</string>
    <string name="screen_main_term_text_collection_use_info">개인정보 수집 및 이용</string>
    <string name="screen_main_term_text_collection_use_info_required">개인정보 수집 및 이용 동의 (필수)</string>

    //Gender
    <string name="screen_gender_text_title">아기 성별을 입력해주세요</string>

    //Day of birth
    <string name="screen_dob_text_title">아기 생일을 입력해주세요</string>

    //Baby Height
    <string name="screen_baby_height_text_title">아기 신장을 입력해주세요</string>

    //Baby Weight
    <string name="screen_baby_weight_text_title">아기 몸무게를 입력해주세요</string>

    //Baby Avatar
    <string name="screen_baby_avatar_text_title">아기 사진을 설정해주세요</string>
    <string name="screen_crop_text_done">완료</string>
    <string name="screen_crop_text_selected">1개 선택됨</string>
    <string name="crop_saving">Saving picture…</string>
    <string name="crop_wait">Please wait…</string>
    <string name="crop_pick_error">No image sources available</string>

    //Good Ingredients
    <string name="screen_good_ingredients_text_title">아기가 섭취 가능한 식재료는 무엇인가요?</string>

    //Adverse Ingredients
    <string name="screen_adverse_ingredients_text_title">이상반응이 있는 식재료는 무엇인가요?</string>

    //Baby Health
    <string name="screen_baby_health_text_title">아기가 현재 갖고있는 특이사항이 있나요?</string>
    <string name="screen_baby_health_text_stomach">변비</string>
    <string name="screen_baby_health_text_thermometer">감기</string>
    <string name="screen_baby_health_text_toilet">설사</string>

    //Today - Main
    <string name="screen_today_text_diet">오늘의 식단</string>
    <string name="screen_today_text_ingredient">먹어본 재료</string>
    <string name="screen_today_text_dashboard">대쉬보드</string>
    <string name="screen_today_text_compared_avg">평균대비</string>
    <string name="screen_today_text_height">%1$s %2$.2f cm</string>
    <string name="screen_today_text_weight">%1$s %2$.2f kg</string>
    <string name="screen_today_text_ml">%1$d ml</string>
    <string name="screen_today_text_fat">지방</string>
    <string name="screen_today_text_calorie">열량</string>
    <string name="screen_today_text_iron">철분</string>
    <string name="screen_today_text_carbon">탄수화물</string>
    <string name="screen_today_text_protein">단백질</string>
    <string name="screen_today_text_avg_height_weight">평균 신장: %1$.2f cm  / 평균 몸무게: %2$.2f kg</string>

    //Today - Nutrition Summary
    <string name="screen_nutrition_summary_text_nutri_intake">영양섭취 통계</string>
    <string name="screen_nutrition_summary_text_three_major">3대 영양소, 물</string>
    <string name="screen_nutrition_summary_text_calorie">칼로리</string>
    <string name="screen_nutrition_summary_text_carbon">탄수화물</string>
    <string name="screen_nutrition_summary_text_protein">단백질</string>
    <string name="screen_nutrition_summary_text_fat">지방</string>
    <string name="screen_nutrition_summary_text_water">물</string>
    <string name="screen_nutrition_summary_text_vitamin_intake">비타민 섭취</string>
    <string name="screen_nutrition_summary_text_daily_amount">일일권장량</string>
    <string name="screen_nutrition_summary_text_mineral_intake">무기질 섭취</string>

    // Dialog measure history
    <string name="dialog_measure_history_text_growth_record">성장기록</string>
    <string name="dialog_measure_history_text_up_5">상위 백분위 5%</string>
    <string name="dialog_measure_history_text_down_5">하위 백분위 5%</string>
    <string name="dialog_measure_history_text_daily">일</string>
    <string name="dialog_measure_history_text_weekly">주</string>
    <string name="dialog_measure_history_text_monthly">월</string>
    <string name="dialog_measure_history_text_height">신장</string>
    <string name="dialog_measure_history_text_weight">몸무게</string>
    <string name="dialog_measure_history_text_value_height">%1$.2f cm</string>
    <string name="dialog_measure_history_text_value_weight">%1$.2f kg</string>

    // Dialog calendar
    <string name="dialog_calendar_text_close">Close</string>
    <string name="dialog_calendar_text_value_height">%1$s %2$.2f cm</string>
    <string name="dialog_calendar_text_value_weight">%1$s %2$.2f kg</string>
    <string name="dialog_calendar_text_height">키</string>
    <string name="dialog_calendar_text_weight">몸무게</string>
    <string name="dialog_calendar_text_nutrition">영양달성</string>

    // Dialog edit meal
    <string name="dialog_edit_meal_text_food">먹어본 음식</string>
    <string name="dialog_edit_meal_text_material">재료</string>
    <string name="dialog_edit_meal_text_ash">회분</string>
    <string name="dialog_edit_meal_text_prepare_material">준비재료</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>