<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.view.MainTermFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/tvTermUse"
        style="@style/title_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_main_term_text_term_use"
        android:textColor="@color/black"
        android:textSize="@dimen/title_small_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glTop" />

    <TextView
        android:id="@+id/tvTermUseExpand"
        style="@style/title_medium"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_large_edit_text"
        android:paddingVertical="@dimen/margin_tiny"
        android:paddingLeft="@dimen/margin_small"
        android:paddingRight="@dimen/margin_tiny"
        android:scrollbars="vertical"
        android:text="@string/term_of_use_text"
        android:textColor="@color/black"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTermUse"
        app:layout_constraintWidth_percent="0.8" />


    <CheckBox
        android:id="@+id/cbTermUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_normal"
        android:button="@drawable/bg_check_box_term"
        app:layout_constraintLeft_toLeftOf="@id/tvTermUseExpand"
        app:layout_constraintTop_toBottomOf="@id/tvTermUseExpand" />

    <TextView
        android:id="@+id/tvCBTermUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:text="@string/screen_main_term_text_term_use_required"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/cbTermUse"
        app:layout_constraintLeft_toLeftOf="@id/cbTermUse"
        app:layout_constraintTop_toTopOf="@id/cbTermUse" />

    <TextView
        android:id="@+id/tvCollectUse"
        style="@style/title_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_main_term_text_collection_use_info"
        android:textColor="@color/black"
        android:textSize="@dimen/title_small_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cbTermUse" />

    <TextView
        android:id="@+id/tvCollectUseExpand"
        style="@style/title_medium"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_large_edit_text"
        android:paddingVertical="@dimen/margin_tiny"
        android:paddingLeft="@dimen/margin_small"
        android:paddingRight="@dimen/margin_tiny"
        android:scrollbars="vertical"
        android:text="@string/term_of_use_text"
        android:textColor="@color/black"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCollectUse"
        app:layout_constraintWidth_percent="0.85" />

    <CheckBox
        android:id="@+id/cbCollectUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_normal"
        android:button="@drawable/bg_check_box_term"
        app:layout_constraintLeft_toLeftOf="@id/tvCollectUseExpand"
        app:layout_constraintTop_toBottomOf="@id/tvCollectUseExpand" />

    <TextView
        android:id="@+id/tvCBCollectUse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_normal"
        android:text="@string/screen_main_term_text_collection_use_info_required"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/cbCollectUse"
        app:layout_constraintLeft_toLeftOf="@id/cbCollectUse"
        app:layout_constraintTop_toTopOf="@id/cbCollectUse" />

</androidx.constraintlayout.widget.ConstraintLayout>