<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.view.MainLoginFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTop"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toTopOf="@id/tvSlogan"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/tvSlogan"
            style="@style/Title_Bold_25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/slogan_text"
            android:textColor="@color/jungle_green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/bg_bottom"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.55"/>

    <LinearLayout
        android:id="@+id/llEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_green"
        app:layout_constraintLeft_toLeftOf="@id/clTop"
        app:layout_constraintRight_toRightOf="@id/clTop"
        app:layout_constraintTop_toBottomOf="@id/clTop"
        app:layout_constraintWidth_percent="0.8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_40"
            android:src="@drawable/ic_naver"
            android:visibility="invisible" />

        <TextView
            style="@style/Title_Medium_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/screen_main_login_text_login_with_email"
            android:textColor="@color/white">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llNaver"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_20"
        android:background="@drawable/bg_naver"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llEmail"
        app:layout_constraintWidth_percent="0.8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_40"
            android:src="@drawable/ic_naver" />

        <TextView
            style="@style/Title_Medium_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/screen_main_login_text_login_with_naver"
            android:textColor="@color/white">

        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llKakao"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_20"
        android:background="@drawable/bg_kakao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llNaver"
        app:layout_constraintWidth_percent="0.8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="@dimen/margin_20"
            android:layout_marginRight="@dimen/margin_40"
            android:src="@drawable/ic_kakao" />

        <TextView
            style="@style/Title_Medium_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/screen_main_login_text_login_with_kakao"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llRegisterByEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llKakao"
        app:layout_constraintWidth_percent="0.8">

        <TextView
            style="@style/Title_Medium_18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/screen_main_login_text_register_with_email"
            android:textColor="@color/dark_gray"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center"
            android:layout_marginLeft="@dimen/margin_10"
            android:src="@drawable/ic_arrow_next" />
    </LinearLayout>

    <TextView
        style="@style/Title_Medium_18"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/app_name_text"
        android:textColor="@color/dark_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHeight_percent="0.15"/>
</androidx.constraintlayout.widget.ConstraintLayout>



