<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.view.BabyHealthFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/title_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_baby_health_text_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/glTop" />

    <LinearLayout
        android:id="@+id/llStomach"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_baby_health_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        app:layout_constraintWidth_percent="0.8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="@dimen/margin_normal"
            android:src="@drawable/ic_stomach" />

        <TextView
            android:id="@+id/tvStomach"
            style="@style/title_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/screen_baby_health_text_stomach"
            android:textAlignment="center"
            android:textColor="@color/rolling_stone"
            android:textSize="@dimen/title_small_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llThermometer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@drawable/bg_baby_health_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llStomach"
        app:layout_constraintWidth_percent="0.8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="@dimen/margin_normal"
            android:src="@drawable/ic_thermometer" />

        <TextView
            android:id="@+id/tvThermometer"
            style="@style/title_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/screen_baby_health_text_thermometer"
            android:textAlignment="center"
            android:textColor="@color/rolling_stone"
            android:textSize="@dimen/title_small_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/llToilet"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_normal"
        android:background="@drawable/bg_baby_health_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/llThermometer"
        app:layout_constraintWidth_percent="0.8">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center"
            android:layout_marginLeft="@dimen/margin_normal"
            android:src="@drawable/ic_toilet" />

        <TextView
            android:id="@+id/tvToilet"
            style="@style/title_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/screen_baby_health_text_toilet"
            android:textAlignment="center"
            android:textColor="@color/rolling_stone"
            android:textSize="@dimen/title_small_size" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>